# Manna

./: .env.template  .gitignore  CREDITS.md  LICENSE  README.md  broadcast-output.html  cliff.toml  components.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
data/: build-bible-db.ts  compute-embeddings.ts  download-biblegateway.py  download-model.ts  download-ndi-sdk.ts  download-sources.ts  download-whisper-model.ts  precompute-all-translations.py  precompute-embeddings-onnx.py  precompute-embeddings.py  prepare-embeddings.ts  schema.sql
data/lib/: python-env.ts
docs/: BACKLOG.md  EXECUTION.md  LEARNINGS.md  RELEASE.md
docs/superpowers/plans/: 2026-04-12-ui-polish.md  2026-04-12-wave-1-foundation.md  2026-04-13-overlay-themes.md  2026-04-14-verse-history-analytics.md
docs/superpowers/specs/: 2026-04-12-manna-features-design.md  2026-04-12-ui-polish-design.md  2026-04-13-overlay-themes-design.md  2026-04-14-verse-history-analytics-design.md
docs/wiki/: Manna-vs-Rhema.md
scripts/: build-updater-manifest.py  prep-hymnals.ts
scripts/hymnals/: fetch-ghs.ts  fetch-mhb.ts  fetch-sankey.ts  fetch-sda.ts  normalize.ts
src/: App.tsx  broadcast-output.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  ghs.json  tauri.conf.full.json  tauri.conf.json  tauri.conf.minimal.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/api/: Cargo.toml
src-tauri/crates/api/src/: coerce.rs  command.rs  dispatch.rs  error.rs  http.rs  lib.rs  osc.rs
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: capture.rs  device.rs  error.rs  lib.rs  meter.rs  types.rs  vad.rs
src-tauri/crates/bible/: Cargo.toml
src-tauri/crates/bible/src/: crossref.rs  db.rs  error.rs  lib.rs  lookup.rs  models.rs  search.rs
src-tauri/crates/broadcast/: Cargo.toml
src-tauri/crates/broadcast/src/: lib.rs  ndi.rs
src-tauri/crates/detection/: Cargo.toml
src-tauri/crates/detection/src/: context.rs  error.rs  lib.rs  merger.rs  pipeline.rs  quotation.rs  reading_mode.rs  sentence_buffer.rs  types.rs
src-tauri/crates/detection/src/direct/: automaton.rs  books.rs  context.rs  detector.rs  fuzzy.rs  mod.rs  parser.rs
src-tauri/crates/detection/src/semantic/: cache.rs  chunker.rs  cloud.rs  detector.rs  embedder.rs  ensemble.rs  hnsw_index.rs  index.rs  mod.rs  onnx_embedder.rs  precompute.rs  synonyms.rs
src-tauri/crates/notes/: Cargo.toml
src-tauri/crates/notes/src/: db.rs  error.rs  lib.rs  models.rs  plan_db.rs  plan_models.rs
src-tauri/crates/notes/tests/: plan_integration.rs
src-tauri/crates/stt/: Cargo.toml
src-tauri/crates/stt/src/: assemblyai.rs  deepgram.rs  error.rs  keyterms.rs  lib.rs  provider.rs  rest.rs  types.rs  whisper.rs  ws_runtime.rs
src-tauri/hymnals/: ghs.json  mhb.json  sankey.json  sda.json
src-tauri/src/: events.rs  lib.rs  menu.rs  state.rs
src-tauri/src/commands/: analytics.rs  audio.rs  bible.rs  broadcast.rs  detection.rs  hymnals.rs  mod.rs  remote.rs  service_plan.rs  session.rs  songs.rs  stt.rs  themes.rs
src-tauri/src/hymnals/: mod.rs
src/components/: about-dialog.tsx  command-palette.tsx  preflight-checklist.tsx  resume-session-dialog.tsx  settings-dialog.tsx  welcome-dialog.tsx
src/hooks/: use-audio.ts  use-bible.ts  use-broadcast.test.ts  use-broadcast.ts  use-detection.ts  use-menu-events.ts  use-remote-control.ts  use-service-plan.ts  use-session.ts  use-tauri-event.ts  use-transcription.ts  use-updater.ts
src/lib/: about-dialog.ts  announcement-dialog.ts  builtin-themes.ts  command-registry.ts  context-search.ts  distribute-summary-drawer.ts  end-session-dialog.ts  export-notes-drawer.ts  settings-dialog.ts  song-expand.test.ts  song-expand.ts  song-meta.test.ts  song-meta.ts  song-search.test.ts  song-search.ts  song-to-render.ts  summarize.ts  verse-renderer.ts
src/stores/: audio-store.ts  bible-store.ts  broadcast-store.test.ts  broadcast-store.ts  detection-store.ts  index.ts  panel-tabs-store.ts  queue-store.ts  service-plan-store.test.ts  service-plan-store.ts  session-store.ts  settings-store.ts  song-store.test.ts  song-store.ts  transcript-store.test.ts  transcript-store.ts  tutorial-store.test.ts  tutorial-store.ts
src/types/: audio.ts  bible.ts  broadcast.ts  detection.ts  index.ts  ndi.ts  queue.ts  session.ts  song.ts  transcript.ts
(+60 files in other folders)
