[package]
name = "rhema-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
rosc = "0.11"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
