[package]
name = "rhema-detection"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
aho-corasick = "1"
lru = "0.12"
rhema-bible = { path = "../bible" }

# Optional heavy dependencies for real embedding / vector search
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.22", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# Dependencies only needed by the precompute binary
env_logger = { version = "0.11", optional = true }

[features]
default = []
onnx = ["ort", "ndarray", "tokenizers"]
vector-search = ["bytemuck"]
precompute-bin = ["onnx", "vector-search", "env_logger"]

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"
required-features = ["precompute-bin"]
